Create List and Detail Views of model Resident

--- a/templates/point_of_care/base.html
+++ b/templates/point_of_care/base.html
@@ -12,6 +12,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </head>
   <body>
+    <h1>Point of Care</h1>
+    <p>Welcome to Point of Care, a web application developed by <em>Camillus MedHaven</em>!</p>
     {% block sidebar %}<!-- insert default navigation text for every page -->{% endblock %}
     {% block content %}<!-- default content text (typically empty) -->{% endblock %}
   </body>
