--- a/templates/point_of_care/resident_confirm_delete.html
+++ b/templates/point_of_care/resident_confirm_delete.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 <h2>Delete Resident</h2>
-<p>Are you sure you want to delete {{ resident.first_name }} {{ resident.last_name }}?</p>
+<div class="jumbotron"><p>Are you sure you want to delete {{ resident.first_name }} {{ resident.last_name }}?</p>
 
 <form action="" method="POST">
   {% csrf_token %}
   <input type="submit" action="" value="Yes, delete." />
-</form>
+</form></div>
 {% endblock %} 
