--- a/templates/point_of_care/base.html
+++ b/templates/point_of_care/base.html
@@ -16,11 +16,13 @@
   <body>    
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-2">
+        <div class="jumbotron col-sm-2">
           {% block sidebar %}
-            <ul class="sidebar-nav">             
+            <img src="{% static 'images/21.jpg' %}" alt="Camillus MedHaven Logo" width = "100" height = "150">
+            <ul class="sidebar-nav">                       
               <li><a href="{% url 'index' %}">Home</a></li>
               <li><a href="{% url 'residents' %}">All residents</a></li>
+              <li><a href="{% url 'interventions' %}">All interventions</a></li>
               <br>              
               {% if user.is_authenticated %}
                 <li>User: {{ user.get_username }}</li>                
@@ -29,8 +31,8 @@
             </ul>
           {% endblock %}
         </div>
-        <div class="col-sm-10 ">
-          <h1><a href="{% url 'index' %}">Point of Care</a></h1>
+        <div class="col-sm-10 ">          
+          <a href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}" alt="Point of Care Logo" width = "434" height = "111"></a>
     <p>Welcome to Point of Care, a web application developed by <em>Camillus MedHaven</em>!</p>
           {% block content %}{% endblock %}
         </div>
