--- a/templates/point_of_care/resident_form.html
+++ b/templates/point_of_care/resident_form.html
@@ -5,11 +5,11 @@
 {% block content %}
 <h2>Add Resident</h2>
 
-<form action="" method="post">
+<div class="jumbotron"><form action="" method="post">
     {% csrf_token %}
     <table>
     {{ form.as_table }}
     </table>
     <input type="submit" value="Submit" />
-</form>
+</form></div>
 {% endblock %} 
