--- a/templates/point_of_care/resident_update_form.html
+++ b/templates/point_of_care/resident_update_form.html
@@ -5,12 +5,11 @@
 {% block content %}
 <h2>Update Resident</h2>
 
-<form action="" method="post">
+<div class="jumbotron"><form action="" method="post">
     {% csrf_token %}
     <table>
     {{ form.as_table }}
     </table>
     <input type="submit" value="Update" />
-
-</form>
+</form></div>
 {% endblock %}
