--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,9 +4,9 @@
 
 {% block content %}
   <h2>Login</h2>
-  <form method="post">
+  <div class="jumbotron"><form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
-  </form>
+  </form></div>
 {% endblock %}
