--- a/templates/point_of_care/intervention_update_form.html
+++ b/templates/point_of_care/intervention_update_form.html
@@ -1,9 +1,9 @@
 {% extends "point_of_care/base.html" %}
 
-{% block title %}<title>Point of Care | Update Resident</title>{% endblock %}
+{% block title %}<title>Point of Care | Update Intervention</title>{% endblock %}
 
 {% block content %}
-<h2>Update Resident</h2>
+<h2>Update Intervention</h2>
 
 <div class="jumbotron"><form action="" method="post">
     {% csrf_token %}
