--- a/templates/point_of_care/resident_detail.html
+++ b/templates/point_of_care/resident_detail.html
@@ -3,9 +3,18 @@
 {% block title %}<title>Point of Care | Resident Profile</title>{% endblock %}
 
 {% block content %}
-  <h2>Resident Profile</h2>  
+  <h2>Resident</h2>  
   <div class="jumbotron"><p><strong>First Name: </strong>{{ resident.first_name }}</p>
   <p><strong>Last Name: </strong>{{ resident.last_name }}</p>
-  <a href="{% url 'resident-update' resident.id %}" >Edit</a> |
-  <a href="{% url 'resident-delete' resident.id %}" >Delete</a></div>
+  {% if perms.cm_portal.change_resident and perms.cm_portal.delete_resident %} 
+    <a class="btn btn-primary" href="{% url 'resident-update' resident.id %}" role="button">Edit</a>  
+    <a class="btn btn-danger" href="{% url 'resident-delete' resident.id %}" role="button">Delete</a>
+  {% elif perms.cm_portal.change_resident %}
+    <a class="btn btn-primary" href="{% url 'resident-update' resident.id %}" role="button">Edit</a>  
+    <a class="btn btn-danger disabled" href="#" role="button">Delete</a>
+  {% else %}
+    <a class="btn btn-primary disabled" href="#" role="button">Edit</a>  
+    <a class="btn btn-danger disabled" href="#" role="button">Delete</a>
+  {% endif %}
+  </div>
 {% endblock %}
