--- a/templates/point_of_care/intervention_form.html
+++ b/templates/point_of_care/intervention_form.html
@@ -1,15 +1,15 @@
 {% extends "point_of_care/base.html" %}
 
-{% block title %}<title>Point of Care | Update Resident</title>{% endblock %}
+{% block title %}<title>Point of Care | Add Intervention</title>{% endblock %}
 
 {% block content %}
-<h2>Update Resident</h2>
+<h2>Add Intervention</h2>
 
 <div class="jumbotron"><form action="" method="post">
     {% csrf_token %}
     <table>
     {{ form.as_table }}
     </table>
-    <input class="btn btn-success" type="submit" value="Update" />
+    <input class="btn btn-success" type="submit" value="Submit" />
 </form></div>
-{% endblock %}
+{% endblock %} 
