--- a/templates/point_of_care/resident_form.html
+++ b/templates/point_of_care/resident_form.html
@@ -10,6 +10,6 @@
     <table>
     {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit" />
+    <input class="btn btn-success" type="submit" value="Submit" />
 </form></div>
 {% endblock %} 
