--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,6 +7,6 @@
   <div class="jumbotron"><form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button class="btn btn-primary" type="submit">Login</button>
   </form></div>
 {% endblock %}
