--- a/templates/point_of_care/resident_confirm_delete.html
+++ b/templates/point_of_care/resident_confirm_delete.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>Delete Resident</h2>
-<div class="jumbotron"><p>Are you sure you want to delete {{ resident.first_name }} {{ resident.last_name }}?</p>
+<div class="jumbotron"><p>Are you sure you want to delete <em>{{ resident.first_name }} {{ resident.last_name }}</em>?</p>
 
 <form action="" method="POST">
   {% csrf_token %}
